✨ feat: uniquely files

--- a/src/pages/[slug]/index.astro
+++ b/src/pages/[slug]/index.astro
@@ -24,7 +24,7 @@ const { Content } = await render(file);
 ---
 
 <FileLayout title={file.data.title}>
-  <article id="article" role="article" class="prose mx-auto mt-8 max-w-3xl">
+  <article id="article" role="article" class="app-prose mx-auto mt-8 max-w-3xl">
     <Content />
   </article>
 </FileLayout>
