--- a/src/layouts/FileLayout.astro
+++ b/src/layouts/FileLayout.astro
@@ -17,7 +17,7 @@ const socialImageURL = new URL(
 ---
 
 <!doctype html>
-<html lang="en">
+<html dir={SITE.dir} lang=`${SITE.lang ?? "en"}`>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -49,6 +49,8 @@ const socialImageURL = new URL(
     <meta property="twitter:image" content={socialImageURL} />
 
     <meta name="theme-color" content="" />
+
+    <script is:inline src="/toggle-theme.js"></script>
   </head>
   <body>
     <div class="mx-auto max-w-3xl px-4 pb-12 pt-8">
@@ -58,3 +60,12 @@ const socialImageURL = new URL(
     </div>
   </body>
 </html>
+
+<style>
+  html,
+  body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
+</style>
