--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,14 +1,10 @@
 ---
-import Layout from "@/layouts/Layout.astro";
-import Header from "@/components/Header.astro";
-import Footer from "@/components/Footer.astro";
+import FileLayout from "@/layouts/FileLayout.astro";
 import LinkButton from "@/components/LinkButton.astro";
 import { SITE } from "@/config";
 ---
 
-<Layout title={`404 Not Found | ${SITE.title}`}>
-  <Header />
-
+<FileLayout title={`404 Not Found | ${SITE.title}`}>
   <main
     id="main-content"
     class="mx-auto flex max-w-app flex-1 items-center justify-center"
@@ -25,6 +21,4 @@ import { SITE } from "@/config";
       </LinkButton>
     </div>
   </main>
-
-  <Footer />
-</Layout>
+</FileLayout>
